syntax = "proto3";

option java_package = "com.dominik.smarthospital.PatientService";

service PatientService {
  rpc getPatientData(stream DataRequest) returns (stream DataResponse);
}

message DataRequest {
  string type = 1;
}

message DataResponse {
  string type = 1;
  string value = 2;
}
